--- a/inicio.html
+++ b/inicio.html
@@ -63,18 +63,8 @@
 			</div>
 	  
 			<!-- Modal body -->
-			<div class="modal-body" style="height: 600px; overflow-y: scroll">
-				<table class="table table-striped mt-40">
-						<thead>
-							<tr>
-								<th>Campo</th>
-								<th>De</th>
-								<th>Para</th>
-							</tr>
-						</thead>
-						<tbody id="corpoDet">
-						</tbody>
-				</table>
+			<div class="modal-body" style="height: 600px; overflow-y: scroll" id='corpoDet'>
+				
 			</div>
 	  
 			<!-- Modal footer -->
