Fazendo busca na planilha

--- a/inicio.html
+++ b/inicio.html
@@ -29,9 +29,10 @@
 			<hr class="mt-40" />
 			<div class="form-group row">
 					<div class="col-6">
-						<input type="text" class="form-control" id="susep" placeholder="Código ZZGUID">
+						<input type="text" class="form-control" id="ZZGUID" placeholder="Código ZZGUID">
 					</div>
-					<button type="button" class="btn btn-primary col-2">Buscar</button>
+					<button type="button" class="btn btn-primary col-2" onclick="buscar()" style="margin-right: 20px;">Buscar</button>
+					<button type="button" class="btn btn-primary col-2" onclick="limpar()">Limpar</button>
 				</div>
 		</form>
 		<table class="table table-striped mt-40">
