Inclusão da tela de loading

--- a/inicio.html
+++ b/inicio.html
@@ -17,7 +17,8 @@
 
 </head>
 <body>
-	<div class="container interna">
+	<div class="loader" style="display: none" id="loader"></div>
+	<div class="container interna" id="myDiv">
 		<img src="includes/img/logo_vetor.png" class="logo-interna float-left">
 		<div class="clearfix"></div>
 		<form class="mt-40">
