--- a/inicio.html
+++ b/inicio.html
@@ -17,6 +17,12 @@
 
 </head>
 <body>
+	<div class="alert alert-danger" role="alert" id="alert" style="display: none">
+	  O campo de busca encontra-se em branco, favor preenchê-lo.
+	</div>
+	<div class="alert alert-danger" role="alert" id="alert2" style="display: none">
+	  Não há resultados para o filtro digitado.
+	</div>
 	<div class="loader" style="display: none" id="loader"></div>
 	<div class="container interna" id="myDiv">
 		<img src="includes/img/logo_vetor.png" class="logo-interna float-left">
