Ajustes no html

--- a/inicio.html
+++ b/inicio.html
@@ -45,11 +45,11 @@
 		<table class="table table-striped mt-40">
 		  <thead>
 		    <tr>
-				<th>CIDTFD_REG_CMADA</th>
-				<th>CSIT_REG_MOVTO_SAP</th>
-				<th>AINCL_REG</th>
-				<th>NREMSS_ENVID_SAP</th>
-				<th>CAG_VDA</th>
+				<th>GUID</th>
+				<th>STATUS REGISTRO</th>
+				<th>DATA MOVIMENTO</th>
+				<th>REMESSA</th>
+				<th></th>
 				<th></th>
 		    </tr>
 		  </thead>
